<resources>
    <string name="app_name">MovieApp</string>

    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="LogIn">LOG IN</string>
    <string name="RememberMe">Remember Me</string>

    <string name="SignUp">Sign Up</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="ConfirmPassword">Confirm Password</string>

    <string name="SearchMovieText">Enter the movie title</string>
    <string name="Search">Search</string>

    <string name="Overview">Overview</string>
    <string name="Trailer">Trailer</string>
    <string name="RelatedMovies">Releated movies</string>
    <string name="Images">Images</string>
    <string name="UserRating">User Rating</string>

    <string name="LogOut">Log out</string>
    <string name="ChangePassword">Change password</string>

    <string name="CurrentPassword">Current password</string>
    <string name="NewPassword">New password</string>
    <string name="ConfirmNewPassword">Confirm new password</string>
</resources>