<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".Activities.RegistrationActivity">

        <TextView
            android:id="@+id/SignUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/SignUp"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/FirstNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/SignUpText"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColorHint="@color/white"
            android:inputType="textPersonName"
            android:hint="@string/FirstName"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/LastNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/FirstNameText"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColorHint="@color/white"
            android:inputType="textPersonName"
            android:hint="@string/LastName"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/EmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LastNameText"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/PasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EmailText"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/ConfirmPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PasswordText"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:hint="@string/ConfirmPassword"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ConfirmPasswordText"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/white"
            android:text="SIGN UP"
            android:textSize="20sp"/>

    </RelativeLayout>